--- a/.github/workflows/z-reusable-do-e2e-tests.yml
+++ b/.github/workflows/z-reusable-do-e2e-tests.yml
@@ -53,38 +53,39 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-      cms:
-        image: ghcr.io/toptal-seo/piranha-cms:DEV-1672-Dockerize-CMS
-        env:
-          CI: true
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          BASIC_AUTH_ENABLED: "FALSE"
-          IS_DEBUG: "TRUE"
-          IS_LOCAL: "FALSE"
-          IS_PRODUCTION: "FALSE"
-          ENVIRONMENT_NAME: CI-E2E-Tests
-
-          PORT:                            3001
-          AWS_ACCESS_KEY_ID:               ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_BUCKET:                      ${{ secrets.AWS_BUCKET }}
-          AWS_EXTENSIONS_PREFIX:           ci-tests/
-          AWS_REGION:                      ${{ secrets.AWS_REGION }}
-          AWS_SECRET_ACCESS_KEY:           ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # TODO: Make DB replication from Editor DB for more actual and safer CI env
-          # Currently: READ-ONLY Dev-CMS DataBase (nightly replicated)
-          DB_MONGOOSE_URI:                 ${{ secrets.DB_MONGOOSE_URI }}
-          DB_SEQUELIZE_USE_SSL:            "FALSE"
-          DB_SEQUELIZE_URI:                postgres://postgres_user:postgres_password@host.docker.internal:5432/postgres_db
-          DATABASE_URL:                    postgres://postgres_user:postgres_password@host.docker.internal:5432/postgres_db
-          JWT_EXPIRATION:                  15m
-          JWT_EXPIRATION_REMEMBER_ME:      30d
-          NEXT_DB_MONGOOSE_URI:            ${{ secrets.DB_MONGOOSE_URI }}
-          NEXT_DB_SEQUELIZE_URI:           postgres://postgres_user:postgres_password@host.docker.internal:5432/postgres_db
-          PIRANHA_PICTURES_URL:            https://piranha-pictures-dev.herokuapp.com
-          SSR_CACHE_UPDATE_THREADS:        7
-        ports:
-          - 3001:3001
-        options: "--add-host=host.docker.internal:host-gateway"
+#      TODO: Debug dockerized CMS when will be dealing with first CI dockerization
+#      cms:
+#        image: ghcr.io/toptal-seo/piranha-cms:DEV-1672-Dockerize-CMS
+#        env:
+#          CI: true
+#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+#          BASIC_AUTH_ENABLED: "FALSE"
+#          IS_DEBUG: "TRUE"
+#          IS_LOCAL: "FALSE"
+#          IS_PRODUCTION: "FALSE"
+#          ENVIRONMENT_NAME: CI-E2E-Tests
+#
+#          PORT:                            3001
+#          AWS_ACCESS_KEY_ID:               ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_BUCKET:                      ${{ secrets.AWS_BUCKET }}
+#          AWS_EXTENSIONS_PREFIX:           ci-tests/
+#          AWS_REGION:                      ${{ secrets.AWS_REGION }}
+#          AWS_SECRET_ACCESS_KEY:           ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          # TODO: Make DB replication from Editor DB for more actual and safer CI env
+#          # Currently: READ-ONLY Dev-CMS DataBase (nightly replicated)
+#          DB_MONGOOSE_URI:                 ${{ secrets.DB_MONGOOSE_URI }}
+#          DB_SEQUELIZE_USE_SSL:            "FALSE"
+#          DB_SEQUELIZE_URI:                postgres://postgres_user:postgres_password@host.docker.internal:5432/postgres_db
+#          DATABASE_URL:                    postgres://postgres_user:postgres_password@host.docker.internal:5432/postgres_db
+#          JWT_EXPIRATION:                  15m
+#          JWT_EXPIRATION_REMEMBER_ME:      30d
+#          NEXT_DB_MONGOOSE_URI:            ${{ secrets.DB_MONGOOSE_URI }}
+#          NEXT_DB_SEQUELIZE_URI:           postgres://postgres_user:postgres_password@host.docker.internal:5432/postgres_db
+#          PIRANHA_PICTURES_URL:            https://piranha-pictures-dev.herokuapp.com
+#          SSR_CACHE_UPDATE_THREADS:        7
+#        ports:
+#          - 3001:3001
+#        options: "--add-host=host.docker.internal:host-gateway"
 
       browser_1:
         image: browserless/chrome:latest
@@ -134,49 +135,49 @@ jobs:
       SSR_SEMAPHORE_INITIAL:           100
 
       # From cms
-#      AWS_ACCESS_KEY_ID:               ${{ secrets.AWS_ACCESS_KEY_ID }}
-#      AWS_BUCKET:                      ${{ secrets.AWS_BUCKET }}
-#      AWS_EXTENSIONS_PREFIX:           ci-tests/
-#      AWS_REGION:                      ${{ secrets.AWS_REGION }}
-#      AWS_SECRET_ACCESS_KEY:           ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#      # TODO: Make DB replication from Editor DB for more actual and safer CI env
-#      # Currently: READ-ONLY Dev-CMS DataBase (nightly replicated)
-#      DB_MONGOOSE_URI:                 ${{ secrets.DB_MONGOOSE_URI }}
-#      DB_SEQUELIZE_USE_SSL:            "FALSE"
-#      DB_SEQUELIZE_URI:                postgres://postgres_user:postgres_password@localhost:5432/postgres_db
-#      DATABASE_URL:                    postgres://postgres_user:postgres_password@localhost:5432/postgres_db
-#      JWT_EXPIRATION:                  15m
-#      JWT_EXPIRATION_REMEMBER_ME:      30d
-#      NEXT_DB_MONGOOSE_URI:            ${{ secrets.DB_MONGOOSE_URI }}
-#      NEXT_DB_SEQUELIZE_URI:           postgres://postgres_user:postgres_password@localhost:5432/postgres_db
-#      PIRANHA_PICTURES_URL:            https://piranha-pictures-dev.herokuapp.com
-#      SSR_CACHE_UPDATE_THREADS:        7
+      AWS_ACCESS_KEY_ID:               ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_BUCKET:                      ${{ secrets.AWS_BUCKET }}
+      AWS_EXTENSIONS_PREFIX:           ci-tests/
+      AWS_REGION:                      ${{ secrets.AWS_REGION }}
+      AWS_SECRET_ACCESS_KEY:           ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # TODO: Make DB replication from Editor DB for more actual and safer CI env
+      # Currently: READ-ONLY Dev-CMS DataBase (nightly replicated)
+      DB_MONGOOSE_URI:                 ${{ secrets.DB_MONGOOSE_URI }}
+      DB_SEQUELIZE_USE_SSL:            "FALSE"
+      DB_SEQUELIZE_URI:                postgres://postgres_user:postgres_password@localhost:5432/postgres_db
+      DATABASE_URL:                    postgres://postgres_user:postgres_password@localhost:5432/postgres_db
+      JWT_EXPIRATION:                  15m
+      JWT_EXPIRATION_REMEMBER_ME:      30d
+      NEXT_DB_MONGOOSE_URI:            ${{ secrets.DB_MONGOOSE_URI }}
+      NEXT_DB_SEQUELIZE_URI:           postgres://postgres_user:postgres_password@localhost:5432/postgres_db
+      PIRANHA_PICTURES_URL:            https://piranha-pictures-dev.herokuapp.com
+      SSR_CACHE_UPDATE_THREADS:        7
 
     steps:
       - uses: actions/checkout@v3
-#      - name: Checking out CMS-${{ github.ref_name == 'editor' || github.ref_name == 'prod' && github.ref_name || 'dev' }} ${{ secrets.CMS_DEPLOY_SSH_KEY }}
-#        uses: actions/checkout@v3
-#        with:
-#          repository: toptal-seo/piranha-cms
-#          token: ${{ secrets.CMS_DEPLOY_SSH_KEY }}
-#          ssh-key: ${{ secrets.CMS_DEPLOY_SSH_KEY }}
-#          ref: ${{ github.ref_name == 'editor' || github.ref_name == 'prod' && github.ref_name || 'dev' }}
-#          path: cms
-#          set-safe-directory: true
+      - name: Checking out CMS-${{ github.ref_name == 'editor' || github.ref_name == 'prod' && github.ref_name || 'dev' }} ${{ secrets.CMS_DEPLOY_SSH_KEY }}
+        uses: actions/checkout@v3
+        with:
+          repository: toptal-seo/piranha-cms
+          token: ${{ secrets.CMS_DEPLOY_SSH_KEY }}
+          ssh-key: ${{ secrets.CMS_DEPLOY_SSH_KEY }}
+          ref: ${{ github.ref_name == 'editor' || github.ref_name == 'prod' && github.ref_name || 'dev' }}
+          path: cms
+          set-safe-directory: true
       - name: Using Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-#      - name: Install CMS dependencies
-#        working-directory: cms
-#        run: npm ci
-#      - name: Building CMS
-#        run: npm run build
-#        working-directory: cms
-#      - name: Starting CMS
-#        run: npm run start &
-#        working-directory: cms
+      - name: Install CMS dependencies
+        working-directory: cms
+        run: npm ci
+      - name: Building CMS
+        run: npm run build
+        working-directory: cms
+      - name: Starting CMS
+        run: npm run start &
+        working-directory: cms
       - name: Wait CMS to be available
         uses: jtalk/url-health-check-action@v2
         with:
@@ -200,8 +201,8 @@ jobs:
           max-attempts: 10 # Optional, defaults to 1
           retry-delay: 5s # Optional, only applicable to max-attempts > 1
           retry-all: false # Optional, defaults to "false"
-#      - name: Prerendering Pages
-#        run: node ./back-end/scripts/prerender_ssr_cache.js ${{ env.SITE_KEY }}
-#        working-directory: cms
+      - name: Prerendering Pages
+        run: node ./back-end/scripts/prerender_ssr_cache.js ${{ env.SITE_KEY }}
+        working-directory: cms
       - name: Running PlayWright e2e tests
         run: npx playwright test --config tests/config/playwright.ci.config.js
